--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -7,7 +7,8 @@ project.ext.react = [
         enableHermes: false,  // clean and rebuild if changing
         cliPath: "../node_modules/react-native/cli.js",
         root: "../",
-        entryFile: "index.android.js"
+        entryFile: "index.android.js",
+        bundleCommand: "webpack-bundle"
 ]
 apply from: "../node_modules/react-native/react.gradle"
 
