--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,15 @@
   "license": "MIT",
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.66.4"
+    "react-native": "0.66.4",
+    "shared": "file:../shared"
   },
   "devDependencies": {
-    "@react-native-community/cli-platform-android": "^6.3.0"
+    "@callstack/repack": "^2.5.1",
+    "@react-native-community/cli-platform-android": "^6.3.0",
+    "babel-loader": "^8.2.3",
+    "shared": "file:../shared",
+    "terser-webpack-plugin": "^5.2.5",
+    "webpack": "^5.65.0"
   }
 }
