--- a/app/settings.gradle
+++ b/app/settings.gradle
@@ -6,6 +6,8 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "App Perf"
+rootProject.projectDir = file(".")
+
 include ':app'
 
 apply from: file("./node_modules/@react-native-community/cli-platform-android/native_modules.gradle");
